added some code and images

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jihad Islam</title>
+    <link rel="shortcut icon" href="./images/png-clipart-animales-23593-bubka-cat-icon-thumbnail.png" type="image/x-icon">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3>Jihad Islam</h3>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li>Hire me</li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
