my second commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jihad Islam</title>
-    <link rel="shortcut icon" href="./images/png-clipart-animales-23593-bubka-cat-icon-thumbnail.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
             <ul>
                 <li>Portfolio</li>
                 <li>Blog</li>
-                <li>Hire me</li>
+                <li><button>Hire me</button></li>
             </ul>
         </nav>
     </header>
