added some code

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <header>
         <nav>
-            <h3>Jihad Islam</h3>
+            <h1>Jihad <span class="islam">Islam</span></h1>
             <ul>
                 <li>Portfolio</li>
                 <li>Blog</li>
-                <li><button>Hire me</button></li>
+                <li><button class="nav-button"><strong>Hire me</strong></button></button></li>
             </ul>
         </nav>
     </header>
