added some code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h1>Jihad <span class="islam">Islam</span></h1>
             <ul>
@@ -16,6 +16,16 @@
                 <li><button class="nav-button"><strong>Hire me</strong></button></button></li>
             </ul>
         </nav>
+       <div class="banner">
+        <div class="banner-inside">
+            <h3>Hi, I am JIHAD</h3>
+            <h1>I am a JUNIOR DEVELOPER</h1>
+            <p>I love coding, all day I write code. If you me your project I will complete the project properly.  Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molestiae provident asperiores ut cum ratione! Molestias earum non itaque minus. Obcaecati recusandae expedita quas non. Quam, reiciendis nesciunt. Nesciunt, delectus!</p>
+            <button class="nav-button">Download Cv</button>
+            <button class="nav-button">Contact</button>
+        </div>
+        <img src="./webdeveloper-portfolio/images/hardy.png" alt="Hardy mama pic" >
+       </div>
     </header>
     <main></main>
     <footer></footer>
