added about section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,30 @@
         <img src="./webdeveloper-portfolio/images/hardy.png" alt="Hardy mama pic" >
        </div>
     </header>
-    <main></main>
+    <main>
+        <section class="about">
+           <h3 class="section-title">About Me</h3>
+           <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse commodi tenetur hic, rem cum, quaerat dolore necessitatibus velit deserunt repudiandae in aperiam ab, aliquid optio totam fugit nostrum! Quae, quis?</p>
+           <div class="about-info-container">
+           <div class="about-info">
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Jihad Islam</p>
+           </div>
+           <div class="about-info">
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">jihad@gmail.com</p>
+           </div>
+           <div class="about-info">
+            <h4 class="info-title">Date of birth</h4>
+            <p class="info-description">32 january,2033</p>
+           </div>
+           <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">Los angeles,USA</p>
+           </div>
+           </div>
+                   </section>
+    </main>
     <footer></footer>
 </body>
 </html>
